--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": ". ./serve.sh"
   },
   "dependencies": {
+    "flag-icons": "^6.6.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
+    "react-intl-tel-input": "^8.2.0",
+    "react-select": "^5.4.0",
     "set-value": "^4.1.0",
     "sweetalert2": "^11.4.23",
     "yup": "^0.32.11"
